[package]
name = "ethabi"
version = "1.0.5"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT"
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use conversion of ethereum contract calls to bytecode."

[dependencies]
rustc-serialize = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.2"
clippy = { version = "0.0.63", optional = true }
docopt = { version = "0.6", optional = true }

[features]
cli = ["docopt"]

[lib]

[[bin]]
name = "ethabi"
path = "src/bin/main.rs"
doc = false

