[package]
name = "ethash"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
crunchy = "0.1.0"
either = "1.0.0"
ethereum-types = "0.6.0"
keccak-hash = "0.2.0"
log = "0.4"
memmap = "0.6"
parking_lot = "0.7"
primal = "0.2.3"

[dev-dependencies]
criterion = "0.2"
rustc-hex = "1.0"
serde_json = "1.0"
tempdir = "0.3"

[features]
default = []
bench = []

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "progpow"
harness = false
