[package]
name = "ethcrypto"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rust-crypto = "0.2.36"
tiny-keccak = "1.0"
eth-secp256k1 = { git = "https://github.com/ethcore/rust-secp256k1" }
ethkey = { path = "../ethkey" }
ethcore-bigint = { path = "../util/bigint" }

