[package]
name = "ethcrypto"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rust-crypto = "0.2.36"
tiny-keccak = "1.3"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
ethkey = { path = "../ethkey" }
ethereum-types = "0.1"
subtle = "0.1"
