[package]
name = "ethdb"
description = "Parity Ethereum command-line tool for database interaction"
homepage = "http://parity.io"
license = "GPL-3.0"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[[bin]]
name = "ethdb"
path = "./src/main.rs"

[dependencies]
common-types = { path = "../ethcore/types" }
docopt = "1.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]

[features]
