[package]
name = "ethkey"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rand = "0.3.14"
lazy_static = "0.2"
tiny-keccak = "1.2"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
rustc-serialize = "0.3"
ethcore-bigint = { path = "../util/bigint" }
rust-crypto = "0.2"
byteorder = "1.0"
