[package]
name = "ethstore"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3"
libc = "0.2"
rand = "0.3"
ethkey = { path = "../ethkey" }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
rustc-serialize = "0.3"
rust-crypto = "0.2.36"
tiny-keccak = "1.0"
docopt = { version = "0.7", optional = true }
time = "0.1.34"
itertools = "0.5"
parking_lot = "0.4"
ethcrypto = { path = "../ethcrypto" }
ethcore-bigint = "0.1.2"
smallvec = "0.3.1"
parity-wordlist = "1.0"
tempdir = "0.3"

[features]
cli = ["docopt"]

[lib]

[[bin]]
name = "ethstore"
path = "src/bin/main.rs"
doc = false
