[package]
name = "ethstore"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.3"
libc = "0.2"
rand = "0.3"
ethkey = { path = "../ethkey" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
rust-crypto = "0.2.36"
tiny-keccak = "1.3"
time = "0.1.34"
itertools = "0.5"
parking_lot = "0.4"
ethcrypto = { path = "../ethcrypto" }
ethcore-bigint = { path = "../util/bigint" }
smallvec = "0.4"
parity-wordlist = "1.0"
tempdir = "0.3"

[lib]
